<resources>
    <string name="app_name">CollabRoute</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_title">Exit CollabRoute</string>
    <string name="exit_text">Application will be closed</string>
    <string name="logout_title">Back to login</string>
    <string name="logout_message">This will log you out, are you sure?</string>
    <string name="exit_travel_text">This will leave current travel..\n are you sure?</string>
    <string name="exit_travel_title">Exit Travel</string>
    <string name="exit_message">See you soon!</string>
    <string name="action_settings">Account Settings</string>
    <string name="splash_description">Route your favourite trip with your friends collaboratively!</string>
    <string name="login_mail">Email Address:</string>
    <string name="login_password">Password:</string>
    <string name="login_button">LOG IN</string>
    <string name="signIn_text">New User?</string>
    <string name="signIn_button">SIGN IN</string>
    <string name="recovery_button">RECOVER</string>
    <string name="recovery_text">Forgot your Password?</string>
    <string name="recovery_alert_title">Change password</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="recovery_alert_message">Insert your email address</string>
    <string name="recovery_alert_wrong_email">Wrong email typed</string>
    <string name="recovery_email_send_error">Error on send email, please try again later</string>
    <string name="recovery_alert_dialog_code_title">Password recovery</string>
    <string name="registration_username">Pick an Username:</string>
    <string name="registration_email">Insert your Email Address:</string>
    <string name="registration_passwd">Choose a Password:</string>
    <string name="registration_vericode">Verification Code</string>
    <string name="registration_email_sent">An email has been sent to: \n\n <b>%1$s</b> \n\ncontaining
                                            the verification code, copy and paste the code
                                            in the verification code field to complete your
                                            registration</string>
    <string name="recovery_email_sent">An email has been sent to: \n\n <b>%1$s</b> \n\ncontaining
                                            the verification code, copy and paste the code
                                            in the verification code field and insert your new password to complete
                                            your password recovery</string>
    <string name="registration_checkmail">CHECK EMAIL</string>
    <string name="registration_button">REGISTER</string>
    <string name="registration_user_mail_name_error">Email, Username or Password missing or incorrect</string>
    <string name="registration_wrong_code">Wrong Verification Code</string>
    <string name="numeric_exception">Only numeric values allowed</string>
    <string name="registration_mail_not_configured"></string>
    <string name="dialog_confirm_title">User not confirmed yet</string>
    <string name="dialog_confirm_account">Your account seems to be not verified</string>
    <string name="dialog_button_confirm">Send</string>
    <string name="dialog_button_checkMail">Check Email</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="codeHint">Type your code here</string>
    <string name="dialog_mail_launcher_msg">Complete action using</string>
    <string name="dialog_mail_launcher_gmail">Gmail</string>
    <string name="dialog_mail_launcher_mail">Email</string>
    <string name="error_connectionTimedOut">Connection timed out</string>
    <string name="error_connectionRefused">Connection refused</string>
    <string name="error_connectionBadUrl">Bad url address</string>
    <string name="error_connectionIOError">Input/Output error</string>
    <string name="error_connectionError">Generic error</string>
    <string name="error_mailForward">Error on sending email \nplease try again later</string>
    <string name="error_mailNotFound">Email address not found</string>
    <string name="error_mailExists">Email address already in use \nplease use another one</string>
    <string name="error_mailAppNotPresent">App not installed</string>
    <string name="error_databaseError">Database error</string>
    <string name="error_wrongCoordinates">Bad Coordinates</string>
    <string name="error_geocodeAPIError">Error on Google Server connection</string>
    <string name="login_success">Welcome on board %1$s!</string>
    <string name="error_authError">Wrong email address \nor password</string>
    <string name="error_wrongToken">It seems that you have some authentication issues\nlog in back please</string>
    <string name="mailHint">Type your email address here</string>
    <string name="passlHint">Type your password here</string>
    <string name="userHint">Type your username here</string>
    <string name="title_travel_list">travels</string>
    <string name="home_title">Welcome %1$s</string>
    <string name="home_myTravel">My travels:</string>
    <string name="home_createNew">Create new travel</string>
    <string name="home_joinTravel">Join travel</string>
    <string name="home_logout">Log out</string>
    <string name="home_emptyList">It seems that you are not member of any travel\nclick on the icon to create a new one!</string>
    <string name="travel_description_label">Description:</string>
    <string name="travel_admin_label">Travel creator:</string>
    <string name="travel_user_label">Users:</string>
    <string name="travel_mp_label">Meeting points:</string>
    <string name="travel_start_button">Start travel</string>
    <string name="travel_leave_button">Leave travel</string>
    <string name="travel_delete_button">Delete travel</string>
    <string name="travel_users_emptyArray">No other user added yet</string>
    <string name="travel_list_user_you">You</string>
    <string name="new__travel_name_hint">Insert travel name</string>
    <string name="new_travel_description_hint">Insert your travel description</string>
    <string name="new_travel_addUser_button">Add user</string>
    <string name="new_travel_deleteUser_button">Delete user</string>
    <string name="new_travel_confirm_travel_button">Done</string>
    <string name="new_travel_cancel_travel_button">Cancel</string>
    <string name="new_travel_auto_complete_field_hint">Insert username\'s email address</string>
    <string name="new_travel_dialog_title">Create a new travel</string>
    <string name="new_travel_dialog_email_error">Incorrect email address</string>
    <string name="new_travel_dialog_user_not_found">User not found</string>
    <string name="new_travel_dialog_user_error">You can\'t add yourself</string>
    <string name="new_travel_dialog_user_list_empty_selected">Empty list or no user selected</string>
    <string name="new_travel_dialog_user_list_already_added">User already in the list</string>
    <string name="new_travel_dialog_user_list_empty_name_description">Travel name or travel description missing</string>
    <string name="new_travel_dialog_user_list_empty_list">Please add at least one user to create your travel</string>
    <string name="delete_travel_dialog_message">Are you sure?</string>
    <string name="delete_travel_dialog_title">%1$s travel </string>
    <string name="title_activity_travel">TravelActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_button_send">Send</string>
    <string name="travel_tab_0">Map</string>
    <string name="travel_tab_1">Routes</string>
    <string name="travel_tab_3">Chat</string>
    <string name="travel_tab_4">Users</string>
    <string name="travel_tab_2">Directions</string>
    <string name="google_play_error_message">Disconnected from Google Play Service</string>
    <string name="gmap_intent_error">Intent deleted while solving Google Map error</string>
    <string name="gmap_connection_error">Error while loading Google Map \n%1$s</string>
    <string name="socket_io_wrong_auth">Wrong user or travel</string>
    <string name="users_visualize_map">Visualize single user</string>
    <string name="users_visualize_them_all">Visualize all users</string>
    <string name="users_route_get_directions">Get directions</string>
    <string name="add_route">Add new route</string>
    <string name="menu_route_title">Route Menu</string>
    <string name="modify_route">Modify route</string>
    <string name="delete_route">Delete route</string>
    <string name="visualize_single_route">Get directions to selected route</string>
    <string name="no_user_selected">Please select a user first</string>
    <string name="gps_disable_message">it seems that Geolocation is disabled..\nwould you like to enable it?</string>
    <string name="gps_enable_button">Enable Geolocation</string>
    <string name="gps_alert_title">Geolocation Warning</string>
    <string name="geolocation_settings">Geolocation Settings:</string>
    <string name="gps_radiobutton">GPS (High Power Consumption)</string>
    <string name="network_radiobutton">WIFI and Cell Tower (Less Accuracy)</string>
    <string name="user_offline_alert">User selected is actually offline..</string>
    <string name="empty_route_message">It seems that nobody added a route yet..\nclick on Add new route and be the first!</string>
    <string name="route_visualize_single_route">Visualize route</string>
    <string name="route_visualize_all_routes">Visualize all routes</string>
    <string name="route_empty_list">There\'s no route to show</string>
    <string name="new_route_button_current_location">Use current location</string>
    <string name="new_route_button_get_from_map">Add location from map</string>
    <string name="new_route_address_edit_text">Address</string>
    <string name="new_route_zip_code_edit_text">ZIP</string>
    <string name="new_route_city_edit_text">City</string>
    <string name="new_route_region_edit_text">District - Region - State</string>
    <string name="new_route_country_edit_text">Country</string>
    <string name="new_route_send_button">Search</string>
    <string name="new_route_title">Add new route</string>
    <string name="new_route_from_map">Tap on the map where you \nwant to create a new route</string>
    <string name="new_route_data_missing">City or country missing</string>
    <string name="new_route_zip_not_numeric">Only numeric values allowed for ZIP code</string>
    <string name="new_route_unknown_country">Unknown Country</string>
    <string name="new_route_address_display">A new route will be created using the following address:</string>
    <string name="delete_route_not_found">Route not found on the database\nprobably somebody already delete it</string>
    <string name="geocode_dialog_title">Search Result:</string>
    <string name="geocode_dialog_positive">We have found the following address:\n\n%1$s\n\nis it correct?</string>
    <string name="geocode_dialog_negative">Something went wrong.. \nno address found</string>
    <string name="directions_error_too_near">You are too near to destination to get directions</string>
    <string name="directions_to_yourself">You can\'t get directions to yourself!</string>
    <string name="directions_dialog_tolls">Tolls</string>
    <string name="directions_dialog_highways">Highways</string>
    <string name="directions_dialog_ferries">Ferries</string>
    <string name="directions_dialog_get_directions">Get directions</string>
    <string-array name="directions_dialog_spinner_array">
        <item>driving</item>
        <item>walking</item>
        <item>bicycling</item>
    </string-array>
    <string name="directions_dialog_negative">Something went wrong.. \nno directions found</string>
</resources>