<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#000000"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context="it.raffaeletosti.collabroute.LoginActivity">

   <TextView
        android:text="@string/login_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginTop="30dp"
       android:editable="false"
       android:textSize="15dp"
       android:textIsSelectable="false"
       android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailLogin"
        android:layout_alignParentTop="false"
        android:background="#dddddd"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/mailHint" />

    <TextView
        android:text="@string/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:editable="false"
        android:textSize="15dp"
        android:textIsSelectable="false"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordLogin"
        android:layout_alignParentTop="false"
        android:background="#dddddd"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/passlHint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/buttonLogin"
        android:onClick="doLogin"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:enabled="true" />

    <TextView
        android:text="@string/signIn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:editable="false"
        android:textSize="15dp"
        android:textIsSelectable="false"
        android:layout_marginLeft="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn_button"
        android:id="@+id/buttonSignIn"
        android:onClick="goToRegistration"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:typeface="normal"
        android:enabled="true" />

    <TextView
        android:text="@string/recovery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:editable="false"
        android:textSize="15dp"
        android:textIsSelectable="false"
        android:layout_marginLeft="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovery_button"
        android:id="@+id/buttonRecovery"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:typeface="normal"
        android:enabled="true" />

</LinearLayout>
</ScrollView>