<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newTravelName"
        android:hint="@string/new__travel_name_hint"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newTravelDescription"
        android:hint="@string/new_travel_description_hint"
        android:layout_marginBottom="10dp" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_travel_auto_complete_field_hint"
        android:id="@+id/autoCompleteTextViewUsers"
        android:layout_marginBottom="10dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_travel_addUser_button"
        android:id="@+id/addUserButton"
        android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_travel_deleteUser_button"
            android:id="@+id/deleteUserbutton"
            android:layout_weight="1" />
    </LinearLayout>

   <!-- <ScrollView
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:id="@+id/scrollViewAddedUsers">
        -->
        <ListView
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:id="@+id/addedUsersListView" />
    <!-- </ScrollView> -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_travel_confirm_travel_button"
            android:id="@+id/confirmTravelButton"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_travel_cancel_travel_button"
            android:id="@+id/deleteTravelButton"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>