<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/delete_route"
        android:id="@+id/delete_route_button"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/route_visualize_single_route"
        android:id="@+id/visualize_route_on_map_button"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/users_route_get_directions"
        android:id="@+id/get_directions_to_route"
        android:layout_weight="1" />

</LinearLayout>