<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it.digisin.collabroute.RegistrationActivity">

    <TextView
        android:text="@string/registration_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:editable="false"
        android:textSize="15dp"
        android:textIsSelectable="false"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/userReg"
        android:layout_alignParentTop="false"
        android:background="#dddddd"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:text="@string/registration_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:editable="false"
        android:textSize="15dp"
        android:textIsSelectable="false"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passReg"
        android:layout_alignParentTop="false"
        android:background="#dddddd"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:text="@string/registration_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:editable="false"
        android:textSize="15dp"
        android:textIsSelectable="false"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/emailReg"
        android:layout_alignParentTop="false"
        android:background="#dddddd"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

   <LinearLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn_button"
        android:id="@+id/buttonReg"
        android:layout_marginTop="30dp"
        android:layout_weight="0.5"
        android:enabled="true" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_checkmail"
        android:id="@+id/buttonCheckMail"
        android:layout_marginTop="30dp"
        android:layout_weight="0.5"
        android:enabled="false" />

   </LinearLayout>

    <TextView
        android:text="@string/registration_vericode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:editable="false"
        android:textSize="15dp"
        android:textIsSelectable="false"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/veriCode"
        android:layout_alignParentTop="false"
        android:background="#dddddd"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:layout_marginLeft="10dp"
        android:editable="false"
        android:enabled="true"
        android:clickable="false"
        android:layout_gravity="left|top" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_button"
        android:id="@+id/buttonCompleteReg"
        android:layout_marginTop="30dp"
        android:layout_weight="0.5"
        android:enabled="false" />

    </LinearLayout>

