<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/delete_travel_dialog_message"
        android:textAlignment="center"
        android:typeface="normal"
        android:gravity="center_horizontal" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:id="@+id/DeleteOkButton"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:enabled="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:id="@+id/DeleteCancelButton"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:enabled="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>
</LinearLayout>